--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,3 @@
 <% @posts.each do |post| %>
-  <div><%= post.title %></div>
+  <div><a href="<%= post_path(post.id) %>"><%= post.title %></a></div>
 <% end %>
